--- a/src/assets/scss/Button.scss
+++ b/src/assets/scss/Button.scss
@@ -1,6 +1,7 @@
 .buttonWrapper {
   position: absolute;
   .button {
+    touch-action: none;
     border: 1px solid black;
     border-radius: 50%;
     position: relative;
