--- a/src/assets/css/Button.css
+++ b/src/assets/css/Button.css
@@ -1,6 +1,7 @@
 .buttonWrapper {
   position: absolute; }
   .buttonWrapper .button {
+    touch-action: none;
     border: 1px solid black;
     border-radius: 50%;
     position: relative;
