--- a/src/assets/css/Number.css
+++ b/src/assets/css/Number.css
@@ -2,7 +2,8 @@
   margin-top: 20px; }
   .numberDisplay p {
     font-size: 20px;
-    padding: 20px 0 0; }
+    padding: 20px 0 0;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.35); }
   .numberDisplay .numbers {
     height: 24px;
     margin-top: 10px; }
