--- a/src/assets/scss/Number.scss
+++ b/src/assets/scss/Number.scss
@@ -3,6 +3,7 @@
   p {
     font-size: 20px;
     padding: 20px 0 0;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255,.35);
   }
   .numbers {
     height: 24px;
