--- a/src/assets/scss/Food.scss
+++ b/src/assets/scss/Food.scss
@@ -2,7 +2,7 @@
   width: 20px;
   height: 20px;
   padding: 2px;
-  border: 2px solid #000;
+  border: 2px solid greenyellow;
   margin: 0 2px 2px 0;
   position: absolute;
   &:after {
@@ -10,6 +10,6 @@
     content: '';
     width: 12px;
     height: 12px;
-    background: #000;
+    background: greenyellow;
   }
 }
