--- a/src/assets/scss/Snake.scss
+++ b/src/assets/scss/Snake.scss
@@ -1,13 +1,13 @@
-.food {
+.snake {
   width: 20px;
   height: 20px;
   padding: 2px;
-  border: 2px solid greenyellow;
+  border: 2px solid #000;
   margin: 0 2px 2px 0;
   position: absolute; }
-  .food:after {
+  .snake:after {
     display: block;
     content: '';
     width: 12px;
     height: 12px;
-    background: greenyellow; }
+    background: #000; }
